# Snake-AI

./: agent.py  helper.py  main_old.py  model.py  pyproject.toml  snake.py
model/: model.pth
